logo en svg alignement filtres pour ihpone et correction inline bloc

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   margin: auto;
 }
 #marseille a:hover,
-#populaire a:hover,
+#populaire figure:hover,
 #activite a:hover {
   transform: scale(1.05);
   transition: 0.3s;
@@ -260,22 +260,17 @@ h1 {
   align-items: center;
   justify-content: space-between;
 }
-#photosPopulaire {
-  display: flex;
-  flex-wrap: wrap;
-}
 .encartPopulaire {
-  width: 100%;
+  flex: auto;
 }
 #populaire figure {
   display: flex;
   height: 160px;
-  width: 100%;
   background-color: white;
   box-shadow: 5px 5px 5px #d1d1d1;
   border-radius: 20px;
   padding: 5px;
-  margin: 1.1vw 1.3vw 1vw 0vw;
+  margin: 1vw 1.3vw 0.5vw 0vw;
 }
 .encartPopulaire img {
   min-width: 40%;
@@ -523,7 +518,7 @@ h4 {
   }
   .boiteFiltres {
     margin-left: 0px;
-    margin-right: 2.6vw;
+    margin-right: 4vw;
   }
   /***************** marseille ************************/
   #marseille {
